--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="profile-card">
         <figure class="profile-card__img">
-            <img src="../assets/pic.jpg" >
+            <img src="./assets/pic.jpg" alt="assets">
         </figure>
 
         <div class="profile-card__desc">
