--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"></path>
                 </svg>
             </a>
-            <a href="https://twitter.com/Siddhartha_R03" class="twitter">
+            <a href="https://twitter.com/Siddhartha_R03/" class="twitter">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="32"
                     height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none"
                     stroke-linecap="round" stroke-linejoin="round">
